fixed alignment of divs

--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,6 @@ textarea {
 	padding: 0px 8px 0px 8px;
 	text-align: center;
 	cursor: pointer;
-	margin-right: 4px;
 }
 
 .cluster-num:hover {
@@ -424,9 +423,13 @@ textarea {
 	cursor: pointer;
 }
 
+.cluster-info {
+	margin-left: 4px;
+}
+
 .div-img {
 	text-align: center;
-	margin: 0px 4px 0px 0px;
+	margin-left: 4px;
 	padding: 2px;
 }
 
